# scolta-demo-wagtail-git

./: .dockerignore  .gitignore  Dockerfile  README.md  SOURCES.md  manage.py  pyproject.toml  requirements.txt
.ddev/: config.wagtail.yaml  config.yaml  docker-compose.packages.yaml
.ddev/web-build/: Dockerfile.python-venv
content/en/: content-en-batch1.yaml  content-en-batch2.yaml  content-en-batch3.yaml  content-en-batch4.yaml
content/translations/: content-de-batch1.yaml  content-de-batch2.yaml  content-de-batch3.yaml  content-de-batch4.yaml  content-es-batch1.yaml  content-es-batch2.yaml  content-es-batch3.yaml  content-es-batch4.yaml  content-fr-batch1.yaml  content-fr-batch2.yaml  content-fr-batch3.yaml  content-fr-batch4.yaml  content-it-batch1.yaml  content-it-batch2.yaml  content-it-batch3.yaml  content-it-batch4.yaml
docs/: apps.py  models.py  views.py
docs/management/commands/: import_gitmastery.py
docs/migrations/: 0001_initial.py
docs/templates/docs/: _meta.html  about_page.html  comparison.html  documentation_page.html  home_page.html  search_page.html  tip.html
docs/templatetags/: gitmastery.py
gitmastery/: settings.py  urls.py  wsgi.py
tests/: conftest.py  settings_test.py  smoke-test.sh  test_content_source.py  test_import.py  test_language_filter.py  test_models.py  test_search_browser.py
theme/: apps.py
theme/static/gitmastery/css/: gitmastery.css
theme/static/gitmastery/js/: lang-switcher.js
theme/templates/: base.html
